--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 <body>
   <main>
     <h1>MechInterp</h1>
-    <p><em>Interpretability. Reversible. Mechanistic.</em></p>
-
-    <p>We're a small team building tools to understand how neural networks work — not just what they do. Inspired by mathematical reversibility and feature decomposition, we aim to push the frontier of interpretability.</p>
-
-    <p>MechInterp is our mission, our name, and our only product.</p>
-
-    <p>Interested in collaborating or funding? Reach out.</p>
-
+    <p>Mechanistic Interpretability is the science of reverse-engineering neural networks to figure out how they actually work. It's not just about predicting what a model will do, but understanding the algorithms its implementing in its parameters.ø
+</p>
     <p class="footer">
       — Kunvar Thaman<br />
       April 2025<br />
