--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 <body>
   <main>
     <h1>MechInterp</h1>
-    <p>Mechanistic Interpretability is the science of reverse-engineering neural networks to figure out how they actually work. It's not just about predicting what a model will do, but understanding the algorithms its implementing in its parameters.ø
-</p>
-    <p class="footer">
-      — Kunvar Thaman<br />
-      April 2025<br />
-      <a href="mailto:kunvar@mechinterp.com">Contact</a>
-    </p>
+    <p>Mechanistic Interpretability is the science of reverse-engineering neural networks to figure out how they actually work. It's not just about predicting what a model will do, but understanding the algorithms it's implementing in its parameters.</p>
   </main>
 </body>
 </html>
