--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mechinterp</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>mechinterp</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>mechinterp<h1>
-        
-        <p>Mechanistic interpretability (often shortened to <i>mechinterp</i>) reframes neural networks not as inscrutable black boxes, but as computational artifacts to be reverse-engineered. Neural networks, from this viewpoint, resemble complex computational circuits: composed of distinct modules and subroutines whose operations can be teased apart and explicitly understood. By systematically probing models, researchers in mechanistic interpretability seek to identify precisely which algorithms a neural network has learned, how these algorithms are encoded in its parameters, and exactly how computation flows from inputs to outputs.</p>
-    </div>
+  <main>
+    <h1>MechInterp</h1>
+
+    <p>
+      Mechanistic interpretability (often shortened to <i>mechinterp</i>) reframes neural networks not as inscrutable black boxes, but as computational artifacts to be reverse-engineered.
+    </p>
+
+    <p>
+      Neural networks, from this viewpoint, resemble complex computational circuits: composed of distinct modules and subroutines whose operations can be teased apart and explicitly understood. By systematically probing models, researchers in mechanistic interpretability seek to identify precisely which algorithms a neural network has learned, how these algorithms are encoded in its parameters, and exactly how computation flows from inputs to outputs.
+    </p>
+
+    <p>
+      In April 2025, Dario Amodei published <a href="https://www.darioamodei.com/post/the-urgency-of-interpretability">an essay</a> titled “The Urgency of Interpretability,” making a passionate case for interpretability research. Amodei set an ambitious goal for Anthropic: by 2027, develop interpretability tools that can reliably detect most problems in AI models. I highly recommend giving it a read.
+    </p>
+
+    <p>
+      The best resource for some of the recent work in the field is Anthropic’s <a href="https://transformer-circuits.pub/">circuits thread</a>. They regularly publish research, accept research notes by other researchers, and frequently provide updates on their future research directions.
+    </p>
+
+    <p>
+      See <a href="https://dynalist.io/d/n2ZWtnoYHrU1s4vnFSAQ519J">this wiki</a> (written by <a href="https://www.neelnanda.io/">Neel Nanda</a>) for an introduction to a lot of the technical terms used in mechinterp. Although it has not been updated since December 2022, it’s well written and still very useful.
+    </p>
+
+    <p>
+      Mechanistic interpretability thrives within an open, collaborative community, with <a href="https://discord.gg/f68W4hBQ">active discord servers</a> and lots of independent researchers.
+    </p>
+
+    <p>— Kunvar Thaman</p>
+    <p><a href="mailto:kunvar@mechinterp.com">Contact</a></p>
+  </main>
 </body>
 </html>
