make footer smaller and subtler

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
         <footer class="contact-footer">
             <div class="container">
-                <p>Created by Kunvar Thaman (<a href="mailto:kunvar@mechinterp.com">email</a>, <a href="https://x.com/firstuserhere" target="_blank">twitter</a>)</p>
+                <p>- Created by Kunvar Thaman (<a href="mailto:kunvar@mechinterp.com">email</a>, <a href="https://x.com/firstuserhere" target="_blank">twitter</a>)</p>
             </div>
         </footer>
     </div>
